<?xml version="1.0"?>
<package>
  <name>coms_msgs</name>
  <version>0.1.0</version>
  <description>The coms_msgs package for sending the gear selector positon, accelerator and brake pedal percentages.</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">http://gitlab.cite.tohoku.ac.jp/tado-aev/coms_msgs</url>

  <author email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generator</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
     <architecture_independent />
   </export>
</package>
